Fix empty labels in the localization files

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -943,7 +943,6 @@ ComparerDBPanel.ComparingEnds=Comparing has been finished.\nObjects to create - 
 ComparerDBPanel.ConnectionsLabel=Connections
 ComparerDBPanel.CreateObjects=Objects To Create
 ComparerDBPanel.CreatingStubs=Creating stubs for %s
-ComparerDBPanel.DATABASE_TRIGGER=
 ComparerDBPanel.DatabaseChanges=Database Changes
 ComparerDBPanel.DropObjects=Objects To Drop
 ComparerDBPanel.ErrorOccurred=Error occurred while comparing DBs.\nThe comparison will be finished forcibly.
@@ -955,7 +954,6 @@ ComparerDBPanel.ExtractingForAlter=Extracting %s for alter
 ComparerDBPanel.ExtractingForCreate=Extracting %s for create
 ComparerDBPanel.ExtractingForDrop=Extracting %s for drop
 ComparerDBPanel.FDBCompared=\nAt least one of the connection use Firebird connection.\nTablespace & Job will not be included in the comparison.
-ComparerDBPanel.GLOBAL_TEMPORARY=
 ComparerDBPanel.GenerateAlterScript=Generating SQL script for %s to alter
 ComparerDBPanel.GenerateCreateComputedScript=Generating SQL script for computed fields to create
 ComparerDBPanel.GenerateCreateConstraintScript=Generating SQL script for constraints to create
@@ -986,14 +984,16 @@ ComparerDBPanel.ScriptSaved=Script was saved successfully.
 ComparerDBPanel.SearchingForDependencies=Searching for dependencies
 ComparerDBPanel.SelectAllButton=Select All
 ComparerDBPanel.SourceLabel=Source DB Script (new)
-ComparerDBPanel.TABLESPACE=
-ComparerDBPanel.TRIGGER=
 ComparerDBPanel.TargetLabel=Target DB Script (old)
 ComparerDBPanel.TreeView=View
 ComparerDBPanel.UnableCompareNoAttributes=Unable to compare.\nNo attributes for comparing selected.
 ComparerDBPanel.UnableCompareNoConnections=Unable to compare.\nAt least one of the connections is inactive.
 ComparerDBPanel.UnableCompareNoProperties=Unable to compare.\nNo properties for comparing selected.
 ComparerDBPanel.UnableCompareSampleConnections=Unable to compare.\nThe same connections selected.
+ComparerDBPanel.TRIGGER=Table Triggers
+ComparerDBPanel.DATABASE_TRIGGER=Database Triggers
+ComparerDBPanel.GLOBAL_TEMPORARY=Global Temporary Tables
+ComparerDBPanel.TABLESPACE=Tablespaces
 ConnectionImporter.ImportingConnection=Importing connection [ {0} ]
 ConnectionPanel.Advanced=Advanced
 ConnectionPanel.Authentication=Authentication:
@@ -2184,7 +2184,7 @@ TraceManagerPanel.Save=Save
 TraceManagerPanel.SelectAll=Select All
 TraceManagerPanel.ServerVersion=Server Version
 TraceManagerPanel.SessionManager=Session Manager
-TraceManagerPanel.SessionName=
+TraceManagerPanel.SessionName=Session Name
 TraceManagerPanel.Sessions=Sessions
 TraceManagerPanel.ShowTopPanel=Show Top Panel
 TraceManagerPanel.Start=Start
