See RS-92249 add a request to commit a transaction when closing the query editor

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -1912,6 +1912,7 @@ QueryEditor.TransactionIsolationLevel=Transaction isolation level:
 QueryEditor.autocommit=Auto-commit={0}
 QueryEditor.script=script
 QueryEditor.title=Query Editor
+QueryEditor.requestTransactionMessage=There is active transaction.You must commit or rollback it before closing form.\nFor commit click "yes", for rollback - "no".
 QueryEditorPopupMenu.auto-complete-database-objects=Auto-complete database objects
 QueryEditorPopupMenu.auto-complete-keywords=Auto-complete keywords
 QueryEditorPopupMenu.cancelQuery=Cancel Query
