--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -1912,6 +1912,7 @@ QueryEditor.TransactionIsolationLevel=Уровень изоляции транз
 QueryEditor.autocommit=Автофиксация={0}
 QueryEditor.script=скрипт
 QueryEditor.title=Редактор запросов
+QueryEditor.requestTransactionMessage=Перед закрытием формы необходимо подтвердить или откатить активную транзакцию.\nДля подтверждения нажмите "да", для отката - "нет".
 QueryEditorPopupMenu.auto-complete-database-objects=Автодополнение объектов БД
 QueryEditorPopupMenu.auto-complete-keywords=Автодополнение ключевых слов
 QueryEditorPopupMenu.cancelQuery=Отменить запрос
