add Database Statistic to menu

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -256,6 +256,8 @@ action.toggle-autocommit-command=Toggle Auto-Commit
 action.toggle-editor-output-command=Show/Hide Editor Output
 action.trace-manager-command.description=Trace Manager
 action.trace-manager-command=Trace Manager
+action.database-statistic-command.description=Database Statistic
+action.database-statistic-command=Database Statistic
 action.undo-command.description=Undo the last action
 action.undo-command=Undo
 action.user-keywords-command=User Defined Keywords
@@ -1218,6 +1220,7 @@ CronTab.weekday/s=weekday(s)
 CronTab.weekday=weekday
 CronTab.weekdays=weekdays
 DatabaseObjectMetaDataPanel.DatabaseObjectMetaData=Database Object Meta Data
+DatabaseStatisticPanel.title=Database statistic
 DatabaseTableNode.columns=Columns
 DatabaseTableNode.foreign-keys=Foreign Keys
 DatabaseTableNode.indexes=Indices
