--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -256,6 +256,8 @@ action.toggle-autocommit-command=Переключение автофиксаци
 action.toggle-editor-output-command=Показать/Скрыть редактор вывода
 action.trace-manager-command.description=Модуль работы с аудитом сервера
 action.trace-manager-command=Трейс Менеджер
+action.database-statistic-command.description=Модуль работы со статистикой БД
+action.database-statistic-command=Статистика БД
 action.undo-command.description=Отмена последнего действия
 action.undo-command=Отмена действия
 action.user-keywords-command=Пользовательские ключевые слова
@@ -1218,6 +1220,7 @@ CronTab.weekday/s=день/дня/дней
 CronTab.weekday=день
 CronTab.weekdays=дни недели
 DatabaseObjectMetaDataPanel.DatabaseObjectMetaData=Метаданные объекта базы данных
+DatabaseStatisticPanel.title=Статистика БД
 DatabaseTableNode.columns=Столбцы
 DatabaseTableNode.foreign-keys=Внешние ключи
 DatabaseTableNode.indexes=Индексы
